# CSC

./: .gitignore  FAQ.md  README.md
cmpe110/: hw1.md  hw2.html  hw2.md  hw3.html  hw3.md  hw4.html  hw4.md  review.md
cmps101/: definition.md
cmps101/pa01/: CMakeLists.txt  Makefile  edge.c  graph01.c  intList.h
cmps101/pa02/: CMakeLists.txt  Makefile  edge.c  edge.h  graph02.c  graphHandler.h  intList.c  listHandler.c  vecHandler.c
cmps101/pa03/: CMakeLists.txt  dfsTrace1.c  dfsTrace1.h  edge.c  graphHandler.h  intList.h  intVec.c  listHandler.c  listHandler.h  scc03.c  test.in  test1.in  vecHandler.c  vecHandler.h
cmps101/pa03-re/: CMakeLists.txt  Makefile  README  dfsTrace1.c  dfsTrace1.h  edge.c  edge.h  graphHandler.h  intVec.h  listHandler.c  listHandler.h  scc03.c  vecHandler.c  vecHandler.h
cmps101/pa4/: CMakeLists.txt  Makefile  README  edge.c  edge.h  edgeVec.c  edgeVec.h  greedy04.c  loadWgtGraph.c  loadWgtGraph.h  minPQ.c  minPQ.h
cmps102/: .gitignore
cmps102/final/: DynamicSurf.java
cmps102/hw1/: hw1-1.md  hw1-2.md  hw1-3.md  hw1-4.md
cmps102/hw2/: 1.md  2.md  3.md  4.md  Code.java
cmps102/hw3/: 1.md  2.md  (+4 more)
cmps109/: CardReader.cpp  CardReader.h  CardReaderMain.cpp  Heap.cpp  Heap.h  HeapMain.cpp  ScanDeviceMain.cpp  ScanningDevice.cpp  ScanningDevice.h  main.cpp  trase.cpp
cmps111/: note.Jan.11.md
cmps112/: .bash_profile  Array.st  OCaml.ml  Prolog.pl  Scheme.scm  collatz.scm  midterm.md  reverse.c
cmps115/: example.java  midterm2.md
cmps130/: define.md
cmps160/: global.d.ts  pack.js  package-lock.json  package.json  server.js
(+143 files in other folders)
